<resources>
    <string name="app_name">Ejercicio Aerolínea</string>
    <string name="et_destino">* Destino</string>
    <string name="et_origen">* Origen</string>
    <string name="sw_movilidad">movilidad reducida</string>
    <string name="et_name">nombre</string>
    <string name="et_apellidos">Apellidos</string>
    <string name="et_telefono">Teléfono</string>
    <string name="et_direction">Dirección</string>
    <string name="iv_nigeria">Nigeria Airlines</string>
    <string name="et_email">E-Mail</string>
    <string name="tv_extras">Extras(+15€):</string>
    <string name="cb_primera_clase">Primera Clase</string>
    <string name="cb_ventana">Asiento con ventana</string>
    <string name="cb_mascota">Mascota</string>
    <string name="tv_seguro">Seguro adicional(30€):</string>
    <string name="rb_si">Si</string>
    <string name="rb_no">No</string>
    <string name="tv_description">Al activar la opción de seguro adicional tendrá acceso a 2 meses de vuelos gratis si usted tiene un problema durante nuestro vuelo</string>
    <string name="bt_comprar">Comprar</string>
    <string name="tv_premium">El billete premium permite embarcar primero en el avión, además de ofrecer una serie de bonificaciones, como equipaje extra, una charla con el piloto y productos de la marca NigeriaAirlines todo por 40€ adicionales</string>
    <string name="miCuenta">Mi Cuenta</string>
    <string name="datosPersonales">Datos Personales</string>
    <string name="documentos_viaje">"Mis Documentos De Viaje "</string>
    <string name="compañeros_viaje">Mis Compañeros De Viaje</string>
    <string name="viajes">Mis Viajes</string>
    <string name="tarjetas_embarque">Tarjetas De Embarque</string>
    <string name="informacion_vuelo">Infomación Del Vuelo</string>
    <string name="info_actualizada">Info Actualizada</string>
    <string name="vales_regalo">Vales Regalo</string>
    <string name="terminos_condiciones">Términos y Condiciones</string>
    <string name="centro_ayuda">Centro De Ayuda</string>
    <string name="contactar_aerolinea">Contactar Con La Aerolinea</string>
    <string name="politica_privacidad">Política De Privacidad</string>
    <string name="configuracion_privacidad">Configuración De Privacidad</string>
    <string name="tv_mensaje" />
    <string name="tv_precio" />
    <string name="bt_confirmar">Confirmar</string>
    <string name="bt_cancelar">Cancelar</string>
    <string name="bt_fecha">Fecha</string>
    <string name="Fecha_salida_hint">Fecha de Salida</string>
    <string name="Fecha_Llegada_hint">Fecha de Llegada</string>
    <string name="tv_fecha_salida">Fecha de salida:</string>
    <string name="fecha_regreso">Fecha de Regreso:</string>
    <string name="fecha_salida">Fecha de Salida:</string>
    <string name="fecha">dataPicker</string>
    <string name="bt_inicio">Inicio</string>
    <string name="bt_atras">Atrás</string>
    <string name="vale1">Vale Regalo por un viaje a Nigeria para conocer nuestros origenes</string>
    <string name="vale2">Vale para un masage en primera clase dado por un quiropráctico experto (CANJEADO)</string>
    <string name="vale3">Vale por un 25% de descuento en el proximo viaje</string>
    <string name="necesita_cuenta">Necesita una cuenta para configurar su privacidad</string>
    <string name="amigos">Aun no tiene Amigos Añadidos</string>
    <string name="sin_viajes">Aun no ha realizado Viajes</string>
    <string name="crea_cuenta">Crea una cuenta  para poder acceder a los datos personales</string>
    <string name="politicaPrivacidad">Nuestra política de privacidad no se encuentra disponible en estos momentos</string>
</resources>